public/css/adminPanel.css
* {
    box-sizing: border-box;
}
body {
    margin: 0;
    padding: 0;
    background-color: #d5dae5;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-align: start;

}
label, input, h3, button{
    color:black;
    }
.header {
    position: absolute;
    width: 100%;
    z-index: 2;
    height: 44px;
    background-color: #fff;
    border-bottom: 3px solid #2d3d51;
}
/* logo in header(mobile version) and side-nav (tablet & desktop) */
.logo {
    height: 44px;
    padding: 10px;
    font-weight: 700;
}
.header .logo {
    color: #233245;
}
input[type="text"]{ min-height: 28px;}
.flexbox .side-nav .logo {
    background-color: #233245;
    color: #fff;
}
.header .logo {
    float: left;
}
.header .logo {
    height: 44px;
    z-index: 1;
    padding: 10px;
    font-weight: 700;
    color: #233245;
}
.logo  i {
    font-size: 22px;
}
.logo span {
    margin-left: 5px;
    text-transform: uppercase;
}
/*.nav-trigger {*/
    /*position: relative;*/
    /*float: right;*/
    /*width: 20px;*/
    /*height: 44px;*/
    /*right: 30px;*/
    /*display: block;*/
/*}*/
/*.nav-trigger span, .nav-trigger span:before, span:after {*/
    /*width: 20px;*/
    /*height: 2px;*/
    /*background-color: #35475e;*/
    /*position: absolute;*/
/*}*/
/*.nav-trigger span {*/
    /*top: 50%;*/
/*}*/
/*.nav-trigger span:before, .nav-trigger span:after {*/
    /*content: '';*/
/*}*/
/*.nav-trigger span:before {*/
    /*top: -6px;*/
/*}*/
/*.nav-trigger span:after {*/
    /*top: 6px;*/
/*}*/
/* side navigation styles */
.flexbox .side-nav {
    position: fixed;
    width: 100px;
    height: 100vh;
    background-color: #35475e;
    z-index: 2;
    overflow:hidden;
    display: inline-block;
}
.flexbox .side-nav.visible {
    display: block;
}
.flexbox .side-nav ul {
    margin: 0;
    padding: 0;
}
.flexbox .side-nav ul li {
    padding: 16px 16px;
    border-bottom: 1px solid #3c506a;
    position: relative;
}
.flexbox .side-nav ul li.active:before {
    content: '';
    position: absolute;
    width: 4px;
    height: 100%;
    top: 0;
    left: 0;
    background-color: #fff;
}
.flexbox .side-nav ul li a {
    color: #fff;
    display: block;
    text-decoration: none;
}
.flexbox .side-nav ul li i {
    color: #0497df;
    min-width: 20px;
    text-align: center;
}
.flexbox .side-nav ul li span:nth-child(2) {
    margin-left: 10px;
    font-size: 14px;
    font-weight: 600;
}
/* main content styles */
.main-content {
    padding: 40px;
    margin-top: 0;
    padding: 0;
    padding-left: 1%;
    padding-top: 44px;
    height: 100%;
    position: relative;

}
#history, #users{
    overflow: scroll;
}

.main-content .export{
    float: right;
    margin-right:5px;
}
#example{
    margin-top:5px;
}
.main-content .title {
    background-color: #eef1f7;
    border-bottom: 1px solid #b8bec9;
    padding: 10px 20px;
    font-weight: 700;
    color: #333;
    font-size: 18px;
}
/* set element styles to fit tablet and higher(desktop) */
@media screen and (max-width: 590px) {
    #content{
        margin-top: 10%;
    }
}
@media screen and (min-width: 600px) {
    #content{
        margin-top:5%;
    }
    .header {
        background-color: #35475e;
        z-index: 1;
    }
    .header .logo {
        display: none;
    }
    /*.nav-trigger {*/
        /*display: none;*/
    /*}*/
    /*.nav-trigger span, .nav-trigger span:before, span:after {*/
        /*background-color: #fff;*/
    /*}*/
    .flexbox .side-nav {
        display: block;
        width: 70px;
        /*z-index: 2;*/
    }
    .flexbox .side-nav ul li span:nth-child(2) {
        display: none;
    }
    .flexbox .side-nav .logo i {
        padding-left: 12px;
    }
    .flexbox .side-nav .logo span {
        display: none;
    }
    .flexbox .side-nav ul li i {
        font-size: 26px;
    }
    .flexbox .side-nav ul li a {
        text-align: center;
    }
    .main-content {
        margin-left: 70px;
    }
}
/* set element styles for desktop */
@media screen and (min-width: 800px) {
    .flexbox .side-nav {
        width: 200px;
    }
    .flexbox .side-nav ul li span:nth-child(2) {
        display: inline-block;
    }
    .side-nav ul li i {
        font-size: 16px;
    }
    .flexbox .side-nav ul li a {
        text-align: left;
    }
    .flexbox .side-nav .logo i {
        padding-left: 0;
    }
    .flexbox .side-nav .logo span {
        display: inline-block;
    }
    .main-content {
        margin-left: 200px;
    }
}
@media screen and (max-width: 600px){
    .flexbox .side-nav{
        display:none;
    }
    #content{
        margin-top:5%;
    }
    .header {
        background-color: #35475e;

    }
    .nav-trigger {
        display: none;
    }
    .nav-trigger span, .nav-trigger span:before, span:after {
        background-color: #fff;
    }
    .flexbox .side-nav {
        display: block;
        width: 40px;

    }
    .flexbox .side-nav .logo span {
        display: none;
    }
    .flexbox .side-nav ul li span:nth-child(2) {
        display: none;
    }

    .flexbox .side-nav ul li i {
        font-size: 16px;
    }

    .main-content {
        margin-left: 40px;
    }
    .flexbox .side-nav ul li.active:before {
        content: '';
        position: absolute;
        width: 5px;
        height: 50%;
        top: 0;
        left: 0;
        bottom:0;
        margin-top:50%;
        background-color: yellow;
    }
    .wrapper .input{
        margin-left:2px;
    }
    .main-content{
        font-size:10px;
        overflow: hidden;
    }

    .admin-content h3{
        font-size: 18px;
    }
}
@media screen and (max-width: 1080px){
    .wrapper .input{
        margin-left:12px;
    }
    .main-content{
        font-size:10px;
        overflow: hidden;
    }
}
/* main box container */
.main {
    display: flex;
    flex-flow: row wrap;
}
.widget {
    flex-basis: 300px;
    flex-grow: 10;
    height: 300px;
    margin: 15px;
    border-radius: 6px;
    background-color: #ffffff;
    position: relative;
}
.widget .title {
    background-color: #eef1f7;
    border-bottom: 1px solid #dfe4ec;
    padding: 10px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    color: #617085;
    font-weight: 600;
}
.input {
    background-color: transparent;
    border: none;
    border-bottom: 1px solid #CCC;
    color: dodgerblue;
    box-sizing: border-box;
    font-size: 18px;
    height: 50px;
    left: 20%;
    margin: -25px 0 0 -100px;
    padding: 10px 0;
    position: relative;
    top: 50%;
    width: 200px;
}
.input:focus {
     outline: none;
 }


.input::-webkit-input-placeholder {
    color: #AAA;
}

.input:focus::-webkit-input-placeholder {
    color: dodgerblue;
}

.input:focus+.underline {
    transform: scale(1);
}
input[type="text"]{
    height: 28px;
}
.datetimepicker1{
    display:inline;
    padding:2px;
}
.radiosel{
    font-weight: bold;
}
.radiosel input{
    color: #0A246A;
}
.flexbox {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    overflow: hidden;
    min-height:100%;
}
.flexbox .col {
    flex: 1;
}
.flexbox .col:nth-child(1) {
    order: 1;
}
.flexbox .col:nth-child(2) {
    order: 0;
}
html, body {
    margin: 0px;
    padding: 0px;
    min-height: 100%;
    height: 100%;
}
body{min-height:100%;}
#content {
    min-height: 100%;
    height: auto !important;
    height: 100%;

}
.push {
    height: 50px;
    clear: both;
}
#flexbox {
    height: 100%;
}
.display tr td{
    padding: 0 auto;
    margin:0 auto;
}

